--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </section>
 
       <footer class="footer">
-        <img class="img-header" src="./arquivos/LogoSortidaz2.png" />
+        <img class="img-footer" src="./arquivos/LogoSortidaz2.png" />
         <div class="footer-botton">
           <button class="button-footer">
             <a
